--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
-
 *{
     box-sizing: border-box;
     padding:0;
@@ -8,8 +7,9 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
-    line-height:1.6;
-
+    background-color: #fff;
+    color:#333;
+    line-height: 1.6;
 }
 
 ul{
@@ -17,12 +17,12 @@ ul{
 }
 
 a{
-    color:#333;
     text-decoration: none;
+    color:#333;
 }
 
 h1,h2{
-    font-weight: 300;
+    font-weight:300px; /*light font*/
     line-height: 1.2;
 }
 
@@ -34,33 +34,59 @@ img{
     width:100%;
 }
 
-#nav-bar{
-    color:white;
+.navbar{
     display:flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     background-color: #333;
+    color:#fff;
     width:100%;
     height:70px;
     position:fixed;
-    top:0x;
+    top:0px;
     padding:0 30px;
-    opacity: 0.8;
+    opacity:0.8;
 }
 
-#nav-bar ul{
-    display: flex;
-}
-#nav-bar a{
-    color:white;
-    padding:10px 20px;
+.navbar a{
+    color:#fff;
+    padding: 10px 20px;
     margin:0 5px;
 }
 
-#nav-bar a:hover{
-    border-bottom: green 2px solid;
+.navbar a:hover{
+    border-bottom:2px solid #28a745;
 }
 
-#nav-bar .logo{
-    font-weight: 400;
+.navbar ul{
+    display:flex;
+}
+
+.top-design{
+    background: url(../images/home/landing-page-3.jpg) no-repeat center center/cover;
+    height:100vh;
+    position: relative;
+    color:#fff;
+}
+
+.top-design .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height:100%;
+}
+
+.top-design .content h1{
+    font-size: 55px;
+}
+
+.top-design .content p{
+    font-size: 23px;
+    max-width: width 600px;
+    margin:20px 0 30px 0;
+}
+
+.top-design{
+    content
 }
