--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     background-color: #fff;
     color:#333;
     line-height: 1.6;
+    font-size:16px;
 }
 
 ul{
@@ -63,7 +64,7 @@ img{
 }
 
 .top-design{
-    background: url(../images/home/landing-page-3.jpg) no-repeat center center/cover;
+    background:url(../images/home/landing-page.jpg) no-repeat center center/cover;
     height:100vh;
     position: relative; /*for making overlay position absolute*/
     color:#fff;
@@ -87,6 +88,29 @@ img{
     margin:20px 0 30px 0;
 }
 
-.top-design{
-    content
+.top-design::before{
+    content:'';
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color:black;
+    opacity:0.4; 
+}
+
+.top-design *{
+    z-index:10;
+}
+
+.icons i{
+    background-color:#28a745;
+    padding:15px;
+    border-radius:50%;
+    color:white;
+    margin-bottom:5px;
+}
+
+.icons{
+    margin:50px 0px;
 }
