--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,4 +1,3 @@
-/*Text Styles*/
 .text-primary{
     color:#28a745;
 }
@@ -21,23 +20,85 @@
     opacity:0.8;
 }
 
-.btn-primary{
+.btn-primary, .bg-primary{
     background:#28a745;
     color:#fff; 
 }
 
-.btn-secondary{
+.btn-secondary, .bg-secondary{
     background:#0284d0;
     color:#fff; 
 }
 
-.btn-dark{
+.btn-dark, .bg-dark{
     background:#333; 
     color:#fff; 
 }
 
-.btn-light{
+.btn-light, .bg-light{
     background:#fff;
     color:#333; 
 }
 
+.btn-outline{
+    color:white;
+    border: solid 2px white;
+    font-weight: 300;
+}
+
+.flex-items{
+    display: flex;
+    justify-content: space-evenly;
+    margin:25px 25px;
+    height:100%;
+    text-align: center;
+}
+
+.flex-items > div{
+    padding:20px;
+}
+
+.flex-columns{
+    display:flex;
+    flex-wrap:wrap;
+    width:100%;
+}
+
+.flex-columns .column{
+    display:flex;
+    flex-direction: column;
+    flex-basis:100%;
+    flex:1;
+}
+
+.flex-columns .column .column-1,.flex-columns .column .column-2{
+    height:100%;
+}
+
+.flex-columns img{
+    height:100%;
+    width:100%;
+    object-fit: cover;
+}
+
+.flex-columns .column .column-2{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    padding:0px 30px;
+}
+
+.flex-columns .column .column-2 h1{
+    font-weight: 300;
+    margin:15px 0px;
+    font-size:40px;
+}
+
+.flex-columns .column .column-2 .btn{
+    width:fit-content;
+    margin-top:15px;
+    margin-bottom:25px;
+}
+.flex-columns .column .column-2 h4{
+    margin-top:25px;
+}
