--- a/css/utilities.css
+++ b/css/utilities.css
@@ -102,3 +102,41 @@
 .flex-columns .column .column-2 h4{
     margin-top:25px;
 }
+
+/*Cases*/
+.flex-grid .row img:hover{
+    opacity:0.8;
+    cursor: pointer;
+}
+
+.section-header{
+    padding:30px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    text-align:center;
+}
+
+.section-header h2{
+    font-size:40px;
+    margin:40px 0px;
+    font-weight:300;
+}
+
+.section-padding{
+    padding: 20px 20px 40px 20px;
+}
+
+/*flex-grid*/
+.flex-grid .row{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.flex-grid .column{
+    flex:25%;
+    max-width:25%;
+    padding: 0 4px;
+}
