--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,40 @@ img{
     margin:50px 0px;
 }
 
+.flex-items .img{
+    object-fit: cover;
+}
+
+.contact-form{
+    background-color: rgb(243, 240, 240);
+}
+
+.contact-form input{
+    width:100%;
+    border:2px solid white;
+    padding:5px;
+    margin:5px 0px;
+}
+
+footer{
+    height:30vh;
+    background-color: #333;
+    color:white;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
+}
+
+.social-media{
+    display:flex;
+}
+
+.social-media > div{
+    padding:20px;
+}
+
+.social-media i:hover{
+    cursor: pointer;
+    opacity:0.7;
+}
