--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,12 @@ footer{
     cursor: pointer;
     opacity:0.7;
 }
+
+@media(max-width: 768px){
+    #blog .column-1{
+        visibility: collapse;
+        height:0px;
+    }
+
+    
+}
