--- a/css/utilities.css
+++ b/css/utilities.css
@@ -148,3 +148,43 @@
     object-fit: cover;
 }
 
+
+@media(max-width: 768px){
+    
+    .flex-items{
+        display: flex;
+        flex-direction:column;
+        margin:25px 25px;
+        height:100%;
+        text-align: center;
+    }
+
+    .flex-items > div{
+        padding:20px;
+    }
+
+    .flex-items img{
+        border-radius: 50%;
+        width:70%;
+        object-fit: cover;
+    }
+
+    .flex-columns {
+        display:flex;
+        flex-direction: column;
+        flex-basis:100%;
+        flex:1;
+    }
+
+    .flex-grid .row{
+        display:flex;
+        flex-direction:column;   
+    }    
+
+    .flex-grid .column{
+        display:flex;
+        flex-direction: column;
+    }
+
+   
+}
